# verdent-account-manager

./: .gitignore  BUILD_README.md  CHANGELOG.md  DEPLOY_CHECKLIST.md  LICENSE  QUICK_START.md  README.md  README_CN.md  SETUP_SUMMARY.md  build_all.bat  build_all.ps1  build_exe.py  build_python.bat  build_python.ps1  build_tauri.bat  build_tauri.ps1  credential_changer.py  example.py  requirements.txt  setup_github_actions.ps1  test_console.py  test_python_exe.bat  verdent_auto_register.py  verdent_auto_register.spec  verdent_auto_register_wrapper.py  快速打包测试.bat  打包修复总结.md  打包说明.txt  验证打包配置.ps1
Verdent_API/: Verdent_API.js  Verdent_API.py
Verdent_account_manger/: .gitignore  build.bat  build.sh  dev_as_admin.bat  index.html  package-lock.json  package.json  run_as_admin.bat  start-dev.bat  start-dev.sh  vite.config.ts
Verdent_account_manger/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  verdent-account-manager.exe.manifest
Verdent_account_manger/src-tauri/capabilities/: main.json
Verdent_account_manger/src-tauri/icons/: icon.icns
Verdent_account_manger/src-tauri/src/: account_manager.rs  admin_helper.rs  api.rs  cleanup_utils.rs  commands.rs  editor_config.rs  errors.rs  jwt_utils.rs  lib.rs  machine_guid.rs  main.rs  models.rs  pkce.rs  settings_manager.rs  storage.rs  verdent_client.rs  vscode_storage.rs
Verdent协议注册/: machine_guid_backup.json  run_as_admin.bat  token_changer_gui.py  verdent_auto_login.py  verdent_auto_register.py  verdent_config.json
docs/: AUTO_REGISTER_GUIDE.md  GitHub_Actions_跨平台打包指南.md  SecretStorage_加密机制.md  VS_Code_state_vscdb_调查报告.md  Verdent管理员权限配置说明.md  _调查总结.md  admin_privileges_solution.md  auto_register_diagnosis.md  bug_fixes_loading_and_multithread.md  bug_fixes_verification.md  cross_platform_build_status.md  cross_platform_dependencies_solution.md  cross_platform_storage_paths.md  device-identity-reset-update.md  enhanced_cleanup_feature.md  fix_dialog_order.md  fix_json_error.md  fix_reset_device_logic.md  fix_summary_2024-12-18.md  install-guide.md  linux_deb_install_fix.md  macOS_exe_error_fix.md  macOS_permission_fix.md  machine-guid-reset-integration.md  machine_guid_ui_improvements.md  multi-editor-storage-support.md  multi-editor-support.md  port_configuration.md  rust_type_fix.md  打包指南.md  (+17 more)
(+74 files in other folders)
